# render

./: pyproject.toml
examples/: animated_image.py  static_image.py
src/render/: component.py  deferrer.py  drawer.py  exceptions.py  execute.py  scene.py  transform.py
src/render/objects/: container.py  image.py  primitive.py  text.py  thread.py  tweener.py
src/render/processing/: component.py  extras.py  scheduler.py  types.py
src/render/rendering/: abc.py
src/render/rendering/abc/: __init__.py  component.py  renderer.py
src/render/rendering/opencl/: __init__.py  component.py  kernel_registry.py  renderer.py
src/render/rendering/pillow/: component.py  renderer.py
